# lisp_course_exercises

./: assignment_6_README.md  assignment_7_README.md  assignment_8_README.md
assignment_1/: CMakeLists.txt  package.xml
assignment_1/src/: DISCLAIMER.txt  orc-battle.lisp
assignment_2/: CMakeLists.txt  assignment-2.asd  package.xml
assignment_2/src/: package.lisp  simple-world.lisp
assignment_3/: CMakeLists.txt  assignment-3.asd  package.xml
assignment_3/src/: oop-world.lisp  package.lisp  treasure-hunt.lisp
assignment_4/: CMakeLists.txt  assignment-4.asd  package.xml
assignment_4/src/: oop-world.lisp  package.lisp  treasure-hunt.lisp
assignment_5/: CMakeLists.txt  assignment-5.asd  package.xml
assignment_5/src/: oop-world.lisp  package.lisp  treasure-hunt.lisp
assignment_6/: CMakeLists.txt  assignment-6.asd  package.xml
assignment_6/src/: oop-world.lisp  package.lisp  treasure-hunt.lisp
assignment_7/: CMakeLists.txt  assignment-7.asd  package.xml
assignment_7/src/: package.lisp  turtlesim-action-client.lisp  turtlesim-tf.lisp
assignment_8/: CMakeLists.txt  assignment-8.asd  package.xml
assignment_8/launch/: assignment_8.launch
assignment_8/src/: package.lisp  turtlesim-tf.lisp
assignment_extra/: CMakeLists.txt  assignment-extra.asd  package.xml
assignment_extra/src/: oop-world.lisp  package.lisp  treasure-hunt.lisp
cram/: .rosinstall
cram/bullet_wrapper/: CMakeLists.txt  bullet-wrapper.asd  package.xml
cram/bullet_wrapper/asdf/: bullet-wrapper.asd
cram/bullet_wrapper/lisp/: package.lisp  wrapper-functions.lisp
cram/bullet_wrapper/raw-resources/: raw-turtle.dae  treasure.dae  wall.dae
cram/bullet_wrapper/resource/: treasure.stl  turtle.stl  wall.stl
cram/giskard_msgs/: CMakeLists.txt  LICENSE  README.md  package.xml
cram/giskard_msgs/action/: ControllerList.action  Move.action  WholeBody.action
cram/giskard_msgs/msg/: ArmCommand.msg  CartesianConstraint.msg  CollisionEntry.msg  Constraint.msg  Controller.msg  ControllerFeedback.msg  JointConstraint.msg  MotionPhase.msg  MoveCmd.msg  SemanticBool.msg  SemanticFloat64.msg  SemanticFloat64Array.msg  SemanticVector3.msg  Task.msg  TaskObject.msg  WholeBodyCommand.msg  WholeBodyState.msg  WorldBody.msg
cram/giskard_msgs/srv/: QueryMotion.srv  SetEnable.srv  UpdateWorld.srv
turtle_goal_referee/: CMakeLists.txt  lisp course 17_01  package.xml  turtle-goal-referee.asd  tutorial.asd
turtle_goal_referee/launch/: referee_broadcaster.launch
turtle_goal_referee/maps/: hallway-1eg.pgm  hallway-1eg.yaml
turtle_goal_referee/src/: cheat-sheet.lisp  goal-publisher.lisp  package.lisp  rooms.lisp  tutorial-package.lisp
