<?xml version="1.0"?>
<package>
  <name>assignment_3</name>
  <version>0.0.0</version>
  <description>The assignment_3 package</description>
  <author>Arthur Niedzwiecki</author>
  <author>Gayane Kazhoyan</author>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <maintainer email="aniedz@cs.uni-bremen.de">Arthur Niedzwiecki</maintainer>
  <license>Public domain</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
