<?xml version="1.0"?>
<package>
  <name>assignment_4</name>
  <version>0.0.0</version>
  <description>The assignment_4 package</description>
  <author>Arthur Niedzwiecki</author>
  <author>Gayane Kazhoyan</author>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <maintainer email="artnie91@cs.uni-bremen.de">Arthur Niedzwiecki</maintainer>
  <license>Public domain</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
