<?xml version="1.0"?>
<package>
  <name>assignment_5</name>
  <version>0.0.0</version>
  <description>The assignment_5 package</description>
  <author>Arthur Niedzwiecki</author>
  <author>Gayane Kazhoyan</author> 
  <maintainer email="aniedz@cs.uni-bremen.de">Arthur Niedzwiecki</maintainer>
  <license>Public domain</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
