<?xml version="1.0"?>
<package>
  <name>assignment_6</name>
  <version>0.0.0</version>
  <description>The assignment_6 package</description>
  <author>Arthur Niedzwiecki</author>
  <author>Gayane Kazhoyan</author>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <maintainer email="arthur.niedzwiecki@gmail.com">Arthur Niedzwiecki</maintainer>
  <license>Public domain</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
