<?xml version="1.0"?>
<package>
  <name>assignment_extra</name>
  <version>0.0.0</version>
  <description>assignment_extra</description>
  <author>Arthur Niedzwiecki</author>
  <maintainer email="aniedz@cs.uni-bremen.de">Arthur Niedzwiecki</maintainer>
  <license>Public domain</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
