<package format="2">
  <name>bullet_wrapper</name>
  <version>0.0.0</version>
  <description>The bullet_world_wrapper package</description>
  <author>Arthur Niedzwiecki</author>
  <author>Gayane Kazhoyan</author>
  <maintainer email="arthur.niedzwiecki@gmail.com">Arthur Niedzwiecki</maintainer>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <license>TODO</license>

  <url type="website">http://cram-system.org</url>
  <url type="repository">https://github.com/artnie/lisp_course_material</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cram_bullet_reasoning_belief_state</depend>  
</package>
