<package format="2">
  <name>giskard_msgs</name>
  <version>0.1.0</version>

  <description>
    Some auxiliary messages for giskard controller nodes.
  </description>

  <author email="blandc@cs.uni-bremen.de">Mihai Pomarlan</author>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <maintainer email="blandc@cs.uni-bremen.de">Mihai Pomarlan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>shape_msgs</depend>

</package>
